--- a/css/main.css
+++ b/css/main.css
@@ -114,7 +114,7 @@ img:hover {
   justify-content: space-between;
   display: flex;
   align-items: center;
-  width: 3800px;
+  width: 4000px;
 }
 
 .images-text-tny {
@@ -294,28 +294,33 @@ height: 450px;
 padding-top: 20px;
 }
 
-                /***MOBILE Styling***/
+                /*********MOBILE Styling*********/
+
 
 @media (max-width: 736px) {
 .navigation-bar {
 height: auto;
-width: 26%;
-font-size: 20%;
+width: 20%;
+font-size: `9`%;
 }
 }
+
+
                 /*NATGEO, ABOUT & TNY Styling*/
 
 @media (max-width: 736px) {
 .images-text-natgeo, .images-text-tny {
 flex-direction: column;
 align-items: center;
-width: 40%;
+width: 37%;
+padding-left: 20px;
 }
 }
 
 @media (max-width: 736px) {
 img {
 height: 15em;
+width: auto;
 }
 }
 
@@ -336,12 +341,5 @@ flex-direction: column;
 align-items: center;
 width: 100%;
 padding-left: 0px;
-}
-}
-
-
-@media (max-width: 736px) {
-#about-photo-jj  {
-height: 24em;
 }
 }
