--- a/css/main.css
+++ b/css/main.css
@@ -301,7 +301,16 @@ padding-top: 20px;
 .navigation-bar {
 height: auto;
 width: 20%;
-font-size: `9`%;
+font-size: 9%;
+flex-direction: column;
+align-items: left;
+}
+}
+
+@media (max-width: 736px) {
+.navigation-bar {
+background {
+display: none;
 }
 }
 
@@ -312,8 +321,9 @@ font-size: `9`%;
 .images-text-natgeo, .images-text-tny {
 flex-direction: column;
 align-items: center;
-width: 37%;
-padding-left: 20px;
+width: 80%;
+padding-left: 0px;
+padding-right: 0px;
 }
 }
 
