--- a/css/main.css
+++ b/css/main.css
@@ -301,16 +301,10 @@ padding-top: 20px;
 .navigation-bar {
 height: auto;
 width: 20%;
-font-size: 9%;
+font-size: 12%;
 flex-direction: column;
 align-items: left;
-}
-}
-
-@media (max-width: 736px) {
-.navigation-bar {
-background {
-display: none;
+background-color: rgba(255,255,255, 0.8);
 }
 }
 
