--- a/css/main.css
+++ b/css/main.css
@@ -105,6 +105,7 @@ img:hover {
    padding-top: 100px;
    padding-left: 220px;
    padding-right: 20px;
+   height: auto;
   }
 
 .images-text-natgeo {
@@ -126,7 +127,6 @@ img:hover {
   align-items: center;
   width: 2600px;
 }
-
 
 
                 /***WORK PICTURES COPYRIGHT STYLING***/
@@ -300,7 +300,7 @@ padding-top: 20px;
 @media (max-width: 736px) {
 .navigation-bar {
 height: auto;
-width: 20%;
+width: 40%;
 font-size: 12%;
 flex-direction: column;
 align-items: left;
